# SDK

./: CMakeLists.txt  Readme.md  demo.sln  readme.md
Include/: GetLidarData.cpp  GetLidarData.h  GetLidarData_C1_v4_0.cpp  GetLidarData_C1_v4_0.h  GetLidarData_C8_v4_0.cpp  GetLidarData_C8_v4_0.h  GetLidarData_CH1W.cpp  GetLidarData_CH1W.h  IncludeFile.h
demo/: demo.vcxproj  main.cpp
demo/Release/demo.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
demo_PCL/: PCLRelease.props  dem_PCL.vcxproj  main_PCL.cpp
demo_Pcap/: demo_Pcap.vcxproj  demo_Pcap.vcxproj.filters  main_Pcap.cpp
